2009-07-30 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeBuilder.cs (GetNestedTypes): Throw if not
	created and not in compiler context.

2009-07-30 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeBuilder.cs (GetEvents): Throw if not created
	and not in compiler context.

	* TypeBuilder.cs (GetNestedType): Don't rely on
	MonoType implementation as it doesn't work if the
	nested type is defined after the TypeBuilder is
	created.

2009-07-29 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeBuilder.cs (GetConstructors): Throw if
	TypeBuilder is incomplete.

2009-07-29 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeBuilder.cs (DefineMethodOverride): Throw if
	method body doesn't belong to the TypeBuilder.

2009-07-29 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeBuilder.cs (GetInterfaces): Return the expanded
	interface list if the type has been created.

2009-07-29 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeBuilder.cs (GetGenericArguments): Returns null for
	 non generic TypeBuilders.

2009-07-29 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeBuilder.cs (GenericParameterAttributes): Return none.

2009-07-29 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeBuilder.cs (GetElementType): Throw always.

2009-07-29 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeBuilder.cs (GetGenericTypeDefinition): Either
	throw or return itself.

2009-07-29 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeBuilder.cs (GenericParameterPosition): Return 0
	instead of throwing.

2009-07-29 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeBuilder.cs (DeclaringMethod): Return null
	instead of throwing.

2009-07-28 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeBuilder.cs (CreateType): Throw if concrete
	type has abstract method.

2009-07-28 Rodrigo Kumpera  <rkumpera@novell.com>

	* GenericTypeParameterBuilder.cs: SetBaseTypeConstraint with
	null argument is the same as passing typeof (object).

2009-07-28 Rodrigo Kumpera  <rkumpera@novell.com>
